// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product resolver product mutation createProduct creates a new Product 1`] = `
Object {
  "assets": Array [],
  "description": "A baked potato",
  "featuredAsset": null,
  "id": "21",
  "languageCode": "en",
  "name": "en Baked Potato",
  "optionGroups": Array [],
  "slug": "en-baked-potato",
  "translations": Array [
    Object {
      "description": "A baked potato",
      "languageCode": "en",
      "name": "en Baked Potato",
      "slug": "en-baked-potato",
    },
    Object {
      "description": "Eine baked Erdapfel",
      "languageCode": "de",
      "name": "de Baked Potato",
      "slug": "de-baked-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation updateProduct updates a Product 1`] = `
Object {
  "assets": Array [],
  "description": "A blob of mashed potato",
  "featuredAsset": null,
  "id": "21",
  "languageCode": "en",
  "name": "en Mashed Potato",
  "optionGroups": Array [],
  "slug": "en-mashed-potato",
  "translations": Array [
    Object {
      "description": "A blob of mashed potato",
      "languageCode": "en",
      "name": "en Mashed Potato",
      "slug": "en-mashed-potato",
    },
    Object {
      "description": "Eine blob von gemashed Erdapfel",
      "languageCode": "de",
      "name": "de Mashed Potato",
      "slug": "de-mashed-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation variants applyFacetValuesToProductVariants adds facets to variants 1`] = `
Array [
  Object {
    "code": "Harris_LLC",
    "id": "1",
    "name": "Harris LLC",
  },
  Object {
    "code": "Heathcote_-_Goyette",
    "id": "3",
    "name": "Heathcote - Goyette",
  },
  Object {
    "code": "Fisher,_Sporer_and_Bailey",
    "id": "5",
    "name": "Fisher, Sporer and Bailey",
  },
]
`;

exports[`Product resolver product mutation variants applyFacetValuesToProductVariants adds facets to variants 2`] = `
Array [
  Object {
    "code": "Harris_LLC",
    "id": "1",
    "name": "Harris LLC",
  },
  Object {
    "code": "Heathcote_-_Goyette",
    "id": "3",
    "name": "Heathcote - Goyette",
  },
  Object {
    "code": "Fisher,_Sporer_and_Bailey",
    "id": "5",
    "name": "Fisher, Sporer and Bailey",
  },
]
`;

exports[`Product resolver product query returns expected properties 1`] = `
Object {
  "assets": Array [
    Object {
      "fileSize": 4,
      "id": "1",
      "mimeType": "image/jpeg",
      "name": "charles-deluvio-695736-unsplash.jpg",
      "preview": "test-url/test-assets/charles-deluvio-695736-unsplash__preview.jpg",
      "source": "test-url/test-assets/charles-deluvio-695736-unsplash.jpg",
      "type": "IMAGE",
    },
    Object {
      "fileSize": 4,
      "id": "5",
      "mimeType": "image/jpeg",
      "name": "mikkel-bech-748940-unsplash.jpg",
      "preview": "test-url/test-assets/mikkel-bech-748940-unsplash__preview.jpg",
      "source": "test-url/test-assets/mikkel-bech-748940-unsplash.jpg",
      "type": "IMAGE",
    },
  ],
  "description": "en Accusantium sed libero repudiandae.",
  "featuredAsset": Object {
    "fileSize": 4,
    "id": "5",
    "mimeType": "image/jpeg",
    "name": "mikkel-bech-748940-unsplash.jpg",
    "preview": "test-url/test-assets/mikkel-bech-748940-unsplash__preview.jpg",
    "source": "test-url/test-assets/mikkel-bech-748940-unsplash.jpg",
    "type": "IMAGE",
  },
  "id": "2",
  "languageCode": "en",
  "name": "en Intelligent Cotton Salad",
  "optionGroups": Array [
    Object {
      "code": "size",
      "id": "1",
      "languageCode": "en",
      "name": "Size",
    },
  ],
  "slug": "en intelligent-cotton-salad",
  "translations": Array [
    Object {
      "description": "en Accusantium sed libero repudiandae.",
      "languageCode": "en",
      "name": "en Intelligent Cotton Salad",
      "slug": "en intelligent-cotton-salad",
    },
    Object {
      "description": "de Accusantium sed libero repudiandae.",
      "languageCode": "de",
      "name": "de Intelligent Cotton Salad",
      "slug": "de intelligent-cotton-salad",
    },
  ],
}
`;

exports[`Product resolver products list query sorts by name 1`] = `
Array [
  "en Awesome Cotton Keyboard",
  "en Awesome Granite Chair",
  "en Ergonomic Metal Sausages",
  "en Fantastic Granite Towels",
  "en Generic Frozen Tuna",
  "en Generic Metal Keyboard",
  "en Handcrafted Wooden Soap",
  "en Handmade Soft Hat",
  "en Handmade Wooden Car",
  "en Intelligent Cotton Salad",
  "en Intelligent Metal Shoes",
  "en Intelligent Rubber Chips",
  "en Intelligent Wooden Hat",
  "en Licensed Frozen Car",
  "en Practical Frozen Fish",
  "en Practical Rubber Pants",
  "en Rustic Steel Gloves",
  "en Small Wooden Chair",
  "en Tasty Soft Gloves",
  "en Unbranded Fresh Hat",
]
`;
